--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 <body>
 	<div id="gameContainer">
 		<canvas id="unity-canvas" data-pixel-art=""></canvas>
-		<script src="Build/Gehn1.loader.js"></script>
+		<script src="Build/gehn3.loader.js"></script>
 		<script>
 			createUnityInstance(document.querySelector("#unity-canvas"), {
-				dataUrl: "Build/Gehn1.data",
-				frameworkUrl: "Build/Gehn1.framework.js",
-				codeUrl: "Build/Gehn1.wasm",
+				dataUrl: "Build/gehn3.data",
+				frameworkUrl: "Build/gehn3.framework.js",
+				codeUrl: "Build/gehn3.wasm",
 				streamingAssetsUrl: "StreamingAssets",
 				companyName: "DefaultCompany",
 				productName: "NewG",
