--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 <body>
 	<div id="gameContainer">
 		<canvas id="unity-canvas" data-pixel-art=""></canvas>
-		<script src="Build/gehn 44.loader.js"></script>
+		<script src="Build/gehn.loader.js"></script>
 		<script>
 			createUnityInstance(document.querySelector("#unity-canvas"), {
-				dataUrl: "Build/gehn 44.data",
-				frameworkUrl: "Build/gehn 44.framework.js",
-				codeUrl: "Build/gehn 44.wasm",
+				dataUrl: "Build/gehn.data",
+				frameworkUrl: "Build/gehn.framework.js",
+				codeUrl: "Build/gehn.wasm",
 				streamingAssetsUrl: "StreamingAssets",
 				companyName: "DefaultCompany",
 				productName: "NewG",
